# bq-watchdog

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: bq_cost_check.yml  tests.yml
bq_watchdog/: __init__.py  cli.py
bq_watchdog/agent/: suggester.py
bq_watchdog/core/: analyser.py  collector.py  dbt_advisor.py  dry_run.py  models.py
bq_watchdog/output/: pr_comment.py
tests/: test_analyser.py
tests/fixtures/: clean_query.sql  cross_join.sql  expensive_query.sql  missing_partition.sql  select_star.sql
